KAN-27 completed implmenting events page with server and database, allow admin to edit event image and text

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -16,3 +16,18 @@
 html {
   scroll-behavior: smooth;
 }
+
+.font-lexand {
+  font-family: 'Lexend', sans-serif;
+}
+
+.pink-button {
+  background-color: #ffa8b5;
+  border-color: #ffa8b5;
+  color: white;
+}
+
+.pink-button:hover {
+  background-color: #ff8ba0;
+  border-color: #ff8ba0;
+}
