--- a/client/src/style.css
+++ b/client/src/style.css
@@ -42,3 +42,17 @@ html {
   background-color: #ffa8b5;
   border-color: #ffa8b5;
 }
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(5px); 
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1200;
+}
